@@ -65,7 +65,8 @@ public:
     virtual void Replace(long from, long to, const wxString& value);
     virtual void Remove(long from, long to);
 
-    // clears the dirty flag
+    // sets/clears the dirty flag
+    virtual void MarkDirty();
     virtual void DiscardEdits();
 
     virtual void SetMaxLength(unsigned long len);
