@@ -53,6 +53,7 @@ All (GUI):
 
 - added some support for C++ exceptions in the library (do read the manual!)
 - added wxListCtrl::GetViewRect()
+- added wxTextCtrl::MarkDirty()
 
 wxMSW:
 
